traefik2.0/canary/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: '2019-11-06T15:53:21Z'
  generation: 1
  name: traefik-nginx
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`nginx.k8s.niewx.club`)
      services:
        - name: appv1
          port: 80
          weight: 3    # 权重
        - name: appv2
          port: 80
          weight: 1    # 权重
